Fix active link on tablet and smaller device

--- a/quiz1/css/style.css
+++ b/quiz1/css/style.css
@@ -268,6 +268,7 @@ body {
 .hero-profile .content .cta:hover {
   background-color: var(--primary);
 }
+
 /* Profile end */
 
 /* Hometown start */
@@ -404,6 +405,7 @@ body {
 .hero-hometown .content .row2-cities .bekasi .cities-buttons .cta:hover {
   background-color: var(--primary);
 }
+
 /* Hometown end */
 
 /* Media queries */
@@ -450,6 +452,14 @@ body {
 
   .navbar .navbar-nav .main-nav a:hover::after {
     transform: scaleX(0.1)
+  }
+
+  .navbar .navbar-nav .main-nav .active-link::after {
+    content: '';
+    display: block;
+    padding-bottom: 0.5rem;
+    border-bottom: 0.1rem solid var(--primary);
+    transform: scaleX(1);
   }
 }
 
